2001-02-03 John R. Jackson <jrj@purdue.edu>

	* .cvsignore: Add entries to keep CVS quiet.
	* */.cvsignore: Ditto.

2001-02-02 John R. Jackson <jrj@purdue.edu>

	* server-src/reporter.c: Fix problem with enum being unsigned on
	  some systems.

2001-01-26 John R. Jackson <jrj@purdue.edu>

	* changer-src/Makefile.am: Double up the references to libamanda to
	  handle systems that put regex in strange places.
	* client-src/Makefile.am: Ditto.
	* recover-src/Makefile.am: Ditto.
	* restore-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.
	* tape-src/Makefile.am: Ditto.

2001-01-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* Amanda 2.4.2p1 released
	
2001-01-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.h (sched_t): new field no_space.
	* server-src/driver.c (start_some_dumps): don't start a disk if
	  no_space is set.
	* server-src/driver.c (continue_dumps): set no_space if it's the
	  only active dumpers, case c.
	* server-src/driver.c (read_schedule): set no_space to 0.

2001-01-23 John R. Jackson <jrj@purdue.edu>

	* configure.in: Test for setmntent.
	* client-src/getfsent.c: Add some support for Redhat 7 /etc/fstab
	  changes that indirectly reference the device for a file system.

2001-01-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.4.2p1)

2001-01-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* NEWS: 2.4.2p1 is a bug fix release.

2001-01-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/INSTALL: Notes about tar-1.13.19

2001-01-07  Thomas Hepper <th@ant.han.de>

	* changer-src/chg-scsi.c: Moved defs. for config_t and changer_t
	into scsi-defs.h
	New option havebarcode to force the reading of the barcode labels
	* changer/src/scsi-changer-driver.c: GenericBarCode now returns
	true/false depending on the setting of havebarcode.
	Removed EXB230DElementStatus, the exsisting Exabyte function works.
	Fixed more warnings from -Wshadow
